# calc

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md
DeepLCD/: CMakeLists.txt  README.md  get_model.sh
DeepLCD/cmake_modules/: FindEigen3.cmake
DeepLCD/include/deeplcd/: deeplcd.h
DeepLCD/online-demo_ws/: 3  README.md  catkin_make_clean
DeepLCD/online-demo_ws/launch/: online-demo.launch  online-demo_debug.launch  rviz.rviz
DeepLCD/online-demo_ws/src/: CMakeLists.txt  online-demo.cpp  online-demo.h  package.xml
DeepLCD/src/deeplcd/: deeplcd.cpp
DeepLCD/src/demo/: demo.cpp
DeepLCD/src/speed-test/: speed-test.cpp  vary-db-size.cpp
DeepLCD/src/test/: deeplcd-test.cpp
TrainAndTest/: Makefile  README.md  main.py  makeNet.py  setup.py  testNet.py  train_multi_gpu.sh  writeDatabase.py
ci/: build.sh
